--- a/config/item-service-dev.yml
+++ b/config/item-service-dev.yml
@@ -5,7 +5,10 @@ spring:
   cloud:
     config:
       override-none: true
-    
+  zipkin:
+    sender:
+      type: rabbit
+       
 #server:
 #  port: 8001
   
