--- a/config/order-service-dev.yml
+++ b/config/order-service-dev.yml
@@ -5,6 +5,9 @@ spring:
   cloud:
     config:
       override-none: true
+  zipkin:
+    sender:
+      type: rabbit
     
 # server:
 #  port: 8201
