--- a/config/zuul-dev.yml
+++ b/config/zuul-dev.yml
@@ -4,7 +4,10 @@ spring:
   cloud:
     config:
       override-none: true
-    
+  zipkin:
+    sender:
+      type: rabbit
+
 server:
   port: 3001
   
@@ -26,6 +29,9 @@ ribbon:
   ReadTimeout: 1000
   MaxAutoRetriesNextServer: 1
   MaxAutoRetries: 1
+  
+
+  
   
 hystrix:
   command:
